--- a/main.html
+++ b/main.html
@@ -11,6 +11,11 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<h1>Time and Space Complexity</h1>
+	<p>Time complexity measures how the running time of an algorithm grows as the size of the input (n) increases.It tells us how efficient an algorithm is — that is, how quickly it runs when given more data.</p>
+
+	<p><b>Space Complexity</b> refers to the amount of memory an algorithm uses as it runs, relative to the size of its input. It measures how efficiently an algorithm utilizes memory resources, including variables, data structures, and function call stacks. For example, an algorithm that stores all elements of a list in memory while processing them has a <b>Space Complexity</b> of O(n), meaning the memory used grows linearly with the input size. Understanding <b>Space Complexity</b> is important because even if an algorithm has good time performance, it may still be inefficient if it consumes too much memory.</p>
+	
 </body>
 
 </html>
