--- a/main.html
+++ b/main.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Time and Space Complexity</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
 
-	<h1>Understanding Time, Space, and Complexity</h1>
-	
-	<p> <strong>Time complexity:</strong>It measures how the running time of an algorithm grows as the size of the input (n) increases.It tells us how efficient an algorithm is — that is, how quickly it runs when given more data.</p>
+  <h1>Understanding Time, Space, and Complexity</h1>
 
-	<p><b>Space Complexity:</b>It refers to the amount of memory an algorithm uses as it runs, relative to the size of its input. It measures how efficiently an algorithm utilizes memory resources, including variables, data structures, and function call stacks. For example, an algorithm that stores all elements of a list in memory while processing them has a <b>Space Complexity</b> of O(n), meaning the memory used grows linearly with the input size. Understanding <b>Space Complexity</b> is important because even if an algorithm has good time performance, it may still be inefficient if it consumes too much memory.</p>
-	
+  <p>
+    Time complexity is a way to measure how the runtime of an algorithm increases as the size of the input grows. 
+    An algorithm with better Time complexity is considered more efficient because it performs faster on larger inputs.
+  </p>
+
+  <p>
+    <b>Space Complexity</b> refers to the amount of memory an algorithm uses while running. 
+    It helps determine how much extra space is needed apart from the input data. 
+    For example, an algorithm with Space Complexity of O(n) requires memory that grows linearly with the input size.
+  </p>
+
 </body>
-
 </html>
